# Good-Workflow

./: .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  FILES.md  README.md  SETUP.md  context.md  run_tests.bat  run_tests.sh
.github/workflows/: build-release.yml  build-simple.yml  protect-contracts.yml
docs/: PROTECTION_OVERRIDE.md
frontend/: app.js  index.html  styles.css
include/: codemap_types.h  example_contract.h.template  graph_builder.h  json_exporter.h  parser.h  webview_app.h
src/: codemap_types.cpp  example_implementation.cpp.template  graph_builder.cpp  json_exporter.cpp  main.cpp  parser.cpp  webview_app.cpp  webview_app_simple.cpp
tests/: test_codemap_types.cpp  test_example.cpp.template  test_graph_builder.cpp  test_json_exporter.cpp  test_parser.cpp
